# hello-todo

./: pyproject.toml  report.html
src/api/: .coverage  bases.py  config.py  database.py  db.sqlite  logger.py  main.py  report.html  start.py  test_db.sqlite
src/api/cards/: client.py  exceptions.py  models.py  routes.py  service.py
src/api/root/: routes.py
src/api/tests/: conftest.py
src/api/tests/cards/: test_add_card.py  test_count_cards.py  test_delete_card.py  test_finish_card.py  test_get_card.py  test_read_cards.py  test_start_card.py  test_update_card.py
src/cli/: main.py
src/tui/: app.css  main.py
src/tui_training/: demo.css  demo.py  main.py  tui_tutorial.py
src/web_ui/: package-lock.json
